--- a/content/About-2.html
+++ b/content/About-2.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a></li>
+                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a><li><a href='About-3.html'>About-3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About-1 << <a href='About-1.html'>Previous</a> <br /><h1>About-2</h1>
-<p><a href="https://www.youtube.com/watch?v=S8JwM42l40c">https://www.youtube.com/watch?v=S8JwM42l40c</a> </p><br />About-1 << <a href='About-1.html'>Previous</a> </div>
+    <div id="tipue_search_content">About-1 << <a href='About-1.html'>Previous</a> <a href='About-3.html'>Next</a> >> About-3<br /><h1>About-2</h1>
+<p><a href="https://www.youtube.com/watch?v=S8JwM42l40c">https://www.youtube.com/watch?v=S8JwM42l40c</a> </p>
+<br />About-1 << <a href='About-1.html'>Previous</a> <a href='About-3.html'>Next</a> >> About-3</div>
         
     <!-- footer -->
       <div class="container">
