--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a></li>
+                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a><li><a href='About-3.html'>About-3</a></li>
                       </ul>
                 </nav>
               </div>
