--- a/content/關於-2.html
+++ b/content/關於-2.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a><li><a href='About-3.html'>About-3</a></li>
+                     <li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About-2 << <a href='About-2.html'>Previous</a> <br /><h1>About-3</h1>
-<p><a href="https://www.youtube.com/watch?v=opK9SClpoxM">https://www.youtube.com/watch?v=opK9SClpoxM</a> </p><br />About-2 << <a href='About-2.html'>Previous</a> </div>
+    <div id="tipue_search_content">關於-1 << <a href='關於-1.html'>Previous</a> <a href='關於-3.html'>Next</a> >> 關於-3<br /><h1>關於-2</h1>
+<p><a href="https://www.youtube.com/watch?v=S8JwM42l40c"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">https://www.youtube.com/watch?v=S8JwM42l40c</span></span></a> </p>
+<br />關於-1 << <a href='關於-1.html'>Previous</a> <a href='關於-3.html'>Next</a> >> 關於-3</div>
         
     <!-- footer -->
       <div class="container">
