--- a/content/關於-4.html
+++ b/content/關於-4.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About-1.html'>About-1</a><li><a href='About-2.html'>About-2</a><li><a href='About-3.html'>About-3</a></li>
+                     <li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About-1 << <a href='About-1.html'>Previous</a> <a href='About-3.html'>Next</a> >> About-3<br /><h1>About-2</h1>
-<p><a href="https://www.youtube.com/watch?v=S8JwM42l40c">https://www.youtube.com/watch?v=S8JwM42l40c</a> </p>
-<br />About-1 << <a href='About-1.html'>Previous</a> <a href='About-3.html'>Next</a> >> About-3</div>
+    <div id="tipue_search_content">關於-3 << <a href='關於-3.html'>Previous</a> <br /><h1>關於-4</h1>
+<p><a data-saferedirecturl="https://www.google.com/url?q=https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e&amp;source=gmail&amp;ust=1768037624432000&amp;usg=AOvVaw1xDdqdUyaM0Us9l8269wG6" href="https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e" target="_blank"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e</span></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span></a></p><br />關於-3 << <a href='關於-3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
