--- a/content/期末考-1.html
+++ b/content/期末考-1.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='期末考-1.html'>期末考-1</a><li><a href='期末考-2.html'>期末考-2</a><li><a href='機器人.html'>機器人</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">關於-3 << <a href='關於-3.html'>Previous</a> <br /><h1>關於-4</h1>
-<p><a data-saferedirecturl="https://www.google.com/url?q=https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e&amp;source=gmail&amp;ust=1768037624432000&amp;usg=AOvVaw1xDdqdUyaM0Us9l8269wG6" href="https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e" target="_blank"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">https://cad.onshape.com/documents/0146816ac23e5cac599f237e/w/f1971a3abc715bd6d85ce809/e/e1cdceb8ca2de15d259e5c3e</span></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span><wbr/><span dir="auto" style="vertical-align: inherit;"></span></a></p><br />關於-3 << <a href='關於-3.html'>Previous</a> </div>
+    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='期末考-2.html'>Next</a> >> 期末考-2<br /><h1>期末考-1</h1>
+<p><a href="https://www.youtube.com/watch?v=S8JwM42l40c"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">https://www.youtube.com/watch?v=S8JwM42l40c</span></span></a> </p>
+<br />關於 << <a href='關於.html'>Previous</a> <a href='期末考-2.html'>Next</a> >> 期末考-2</div>
         
     <!-- footer -->
       <div class="container">
