--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='期末考-1.html'>期末考-1</a><li><a href='期末考-2.html'>期末考-2</a><li><a href='機器人.html'>機器人</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='關於-2.html'>Next</a> >> 關於-2<br /><h1>關於-1</h1>
+    <div id="tipue_search_content"> <a href='期末考-1.html'>Next</a> >> 期末考-1<br /><h1>關於</h1>
 <p><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">課程名稱：電腦輔助設計與實習</span></span></p>
 <p><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">課程評分:</span></span></p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">學習心得報告 (60%)</span></span></span><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;"> - MS Teams線上參與，每三週6人一組發表學習心得。</span></span></p>
@@ -155,7 +155,7 @@ img.add_border {
 <p style="padding-left: 60px;"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">w18: 課程總結</span></span></p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">個人與分組網站維護（40%）</span></span></span><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;"> -每週至少兩次與進度課程相關的學習內容與心得。</span></span></p>
 <p style="padding-left: 60px;"><span dir="auto" style="vertical-align: inherit;"><span dir="auto" style="vertical-align: inherit;">w9期中自評、w18期末自評 </span></span></p>
-<br /> <a href='關於-2.html'>Next</a> >> 關於-2</div>
+<br /> <a href='期末考-1.html'>Next</a> >> 期末考-1</div>
         
     <!-- footer -->
       <div class="container">
