--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='期末考-1.html'>期末考-1</a><li><a href='期末考-2.html'>期末考-2</a><li><a href='機器人.html'>機器人</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,4 +140,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='關於-1.html'>關於-1</a><li><a href='關於-2.html'>關於-2</a><li><a href='關於-3.html'>關於-3</a><li><a href='關於-4.html'>關於-4</a></li></ul></section></div></body></html>
+    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='關於.html'>關於</a><li><a href='期末考-1.html'>期末考-1</a><li><a href='期末考-2.html'>期末考-2</a><li><a href='機器人.html'>機器人</a></li></ul></section></div></body></html>
